# fish_regression

./: Dockerfile  pyproject.toml
LB/: default.conf
src/fishregression/: cli.py  main.py  regression.pkl
src/fishregression/model/: manager.py
src/fishregression/note/: domi_regression.ipynb  regression.ipynb  regression.pkl
