[project]
name = "fishregression"
version = "0.2.0"
description = "Default template for PDM package"
authors = [
    {name = "sunwoo", email = "summerham22@gmail.com"},
]
dependencies = [
    "scikit-learn>=1.5.1",
    "pandas>=2.2.2",
    "numpy>=2.1.1",
    "fastapi>=0.114.0",
    "uvicorn>=0.30.6",
    "fire>=0.6.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
note = [
    "notebook>=7.2.2",
]
test = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
]
matplotlib = []

[project.scripts]
prediction = 'fishregression.cli:predict'


[tool.pytest.ini_options]
pythonpath = "src"
